--- a/ext-saladic/refactor.css
+++ b/ext-saladic/refactor.css
@@ -48,26 +48,35 @@ iframe{
     display: none;
 }
 /* 设置页隐藏 */
-main.ant-layout-content[data-option-content=Dictionaries] .ant-col-13,
+/* main.ant-layout-content[data-option-content=Dictionaries] .ant-col-13,
 main.ant-layout-content[data-option-content=Profiles] .ant-col-12{
     width: 100%;
-}
-main.ant-layout-content[data-option-content=General] form>button,
+} */
+main.ant-layout-content .saladict-form-btns button:nth-of-type(2),
+main.ant-layout-content[data-option-content=General] form>.ant-row:nth-of-type(1),
+main.ant-layout-content[data-option-content=Notebook] form>.ant-row:nth-of-type(3),
+main.ant-layout-content[data-option-content=Notebook] form>.ant-row:nth-of-type(4),
+main.ant-layout-content[data-option-content=Notebook] form>.ant-row:nth-of-type(5),
+main.ant-layout-content[data-option-content=Notebook] form>.ant-row:nth-of-type(6),
 main.ant-layout-content[data-option-content=Privacy] form>.ant-row:nth-of-type(1),
+main.ant-layout-content[data-option-content=SearchModes] form>.ant-row:nth-of-type(1),
+main.ant-layout-content[data-option-content=SearchModes] form>.ant-row:nth-of-type(2),
+main.ant-layout-content[data-option-content=SearchModes] form>.ant-row:nth-of-type(3),
+main.ant-layout-content[data-option-content=SearchModes] form>.ant-row:nth-of-type(4),
+main.ant-layout-content[data-option-content=SearchModes] form>.ant-row:nth-of-type(5),
+main.ant-layout-content[data-option-content=SearchModes] form>.ant-row:nth-of-type(6),
+main.ant-layout-content[data-option-content=SearchModes] form>.ant-row:nth-of-type(7),
 main.ant-layout-content[data-option-content=DictPanel] form>.ant-row:nth-of-type(6),
 main.ant-layout-content[data-option-content=DictPanel] form>.ant-row:nth-of-type(7),
-main.ant-layout-content[data-option-content=DictPanel] form>.ant-row:nth-of-type(8),
 main.ant-layout-content[data-option-content=DictPanel] form>.ant-row:nth-of-type(9),
 main.ant-layout-content[data-option-content=DictPanel] form>.ant-row:nth-of-type(10),
-main.ant-layout-content[data-option-content=DictPanel] form>.ant-row:nth-of-type(11),
-main.ant-layout-content[data-option-content=General] form>.ant-row:nth-of-type(1){
+main.ant-layout-content[data-option-content=DictPanel] form>.ant-row:nth-of-type(11){
     display: none;
 }
-.ant-layout-sider .ant-menu-item:nth-of-type(5),
-.ant-layout-sider .ant-menu-item:nth-of-type(7),
 .ant-layout-sider .ant-menu-item:nth-of-type(8),
 .ant-layout-sider .ant-menu-item:nth-of-type(9),
-.ant-layout-sider .ant-menu-item:nth-of-type(10),
-.ant-layout-sider .ant-menu-item:nth-of-type(11){
+.ant-layout-sider .ant-menu-item:nth-of-type(11),
+.ant-layout-sider .ant-menu-item:nth-of-type(12),
+.ant-layout-sider .ant-menu-item:nth-of-type(13){
     display: none;
 }
