--- a/webextensions-emulator-master/lib/mock/refactor.css
+++ b/webextensions-emulator-master/lib/mock/refactor.css
@@ -54,6 +54,7 @@ main.ant-layout-content[data-option-content=Profiles] .ant-col-12{
 } */
 main.ant-layout-content .saladict-form-btns button:nth-of-type(2),
 main.ant-layout-content[data-option-content=General] form>.ant-row:nth-of-type(1),
+main.ant-layout-content[data-option-content=General] form>.ant-row:nth-of-type(3),
 main.ant-layout-content[data-option-content=Notebook] form>.ant-row:nth-of-type(6),
 main.ant-layout-content[data-option-content=Notebook] form>.ant-row:nth-of-type(7),
 main.ant-layout-content[data-option-content=Privacy] form>.ant-row:nth-of-type(1),
@@ -75,6 +76,7 @@ main.ant-layout-content[data-option-content=DictPanel] form>.ant-row:nth-of-type
 .ant-layout-sider .ant-menu-item:nth-of-type(9),
 .ant-layout-sider .ant-menu-item:nth-of-type(11),
 .ant-layout-sider .ant-menu-item:nth-of-type(12),
-.ant-layout-sider .ant-menu-item:nth-of-type(13){
+.ant-layout-sider .ant-menu-item:nth-of-type(13),
+.ant-layout-sider .ant-menu-item:nth-of-type(16){
     display: none;
 }
